# litlens

./: .env.example  .gitignore  DONE.md  Dockerfile.backend  Dockerfile.frontend  README.md  app.py  docker-compose.yml  pyproject.toml  render.yaml  requirements.txt
.github/workflows/: ci.yml
.streamlit/: config.toml
analytics/: queries.sql
backend/: config.py  database.py  main.py  models.py  schemas.py
backend/routers/: analytics.py  health.py  papers.py  search.py
backend/services/: deduplicator.py  embedder.py  evaluator.py  fetcher.py  generator.py  intent_classifier.py  query_expansion.py  reranker.py
backend/utils/: logging.py  rate_limiter.py
eval/: bioasq_loader.py  contradiction_labels.json  run_eval.py  run_ragas_eval.py  test_set.json
frontend/: app.py
frontend/components/: analytics_dashboard.py  contradiction_panel.py  eval_dashboard.py  result_card.py  search_bar.py
frontend/utils/: api_client.py
scripts/: init_db.py
src/: deduplicator.py  fetcher.py  reranker.py  synthesizer.py
tests/: conftest.py  test_api.py  test_deduplicator.py  test_eval_gate.py  test_fetcher.py  test_generator.py  test_intent_classifier.py  test_reranker.py  test_synthesis_quality.py
