[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "litlens"
version = "1.0.0"
requires-python = ">=3.11"
dependencies = [
    # Core
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.28.0",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.2.0",
    # Database
    "sqlalchemy>=2.0.0",
    "asyncpg>=0.29.0",
    "pgvector>=0.2.4",
    "alembic>=1.13.0",
    # HTTP
    "httpx>=0.27.0",
    # OpenAI
    "openai>=1.50.0",
    # Reranker
    "sentence-transformers>=2.6.0",
    "torch>=2.2.0",
    # Vector search
    "faiss-cpu>=1.8.0",
    # NLP / text processing
    "lxml>=5.1.0",
    "rapidfuzz>=3.6.0",
    # Data
    "numpy>=1.26.0",
    "pandas>=2.2.0",
    # Eval
    "ragas>=0.1.7",
    "datasets>=2.18.0",
    # Utilities
    "python-dotenv>=1.0.0",
    "tenacity>=8.2.0",
    "structlog>=24.1.0",
]

[project.optional-dependencies]
frontend = [
    "streamlit>=1.32.0",
    "plotly>=5.20.0",
]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-mock>=3.12.0",
    "pytest-httpx>=0.30.0",
    "httpx>=0.27.0",
    "ruff>=0.3.0",
    "mypy>=1.9.0",
]

[tool.setuptools.packages.find]
include = ["backend*", "frontend*", "eval*", "analytics*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = false
